# Trip_splitter

./: README.md  db_app.py  guide.md  pyproject.toml  requirements.txt
src/trip_splitter/: app.py  cli.py  config.py  utils.py
