[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trip-splitter"
version = "0.1.0"
description = "Privacy-first, self-hostable trip expense splitter"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "streamlit",
  "pymongo",
  "pandas",
  "matplotlib",
  "typer",
  "toml"
]

[project.scripts]
trip-splitter = "trip_splitter.cli:app"
